# warp-globalization

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  scan_result.json  string.json
.github/workflows/: 01-translate.yml  02-build.yml
config/: do_not_translate.json  glossary.yaml
i18n/: zh-CN.json
i18n/master-d0f045c01bac/: zh-CN.json
i18n/master-f0c8b7f723b7/: zh-CN.json
i18n/v0.2026.04.29.08.56.stable_00/: zh-CN.json
src/warpl10n/: __init__.py  cli.py  extract.py  patch_update.py  replace.py  scan.py  select_translation.py  translate.py  utils.py  validate.py
tests/: test_patch_update.py
